New TIP #485: "Remove Deprecated API", partially split of from TIP #439 (Semantic Versioning)

--- a/tip/439.md
+++ b/tip/439.md
@@ -122,31 +122,7 @@ with version 8.7. Still it would be desirable for the TCT to describe a
 procedure for that, this is outside the scope of this TIP.
 
 Semantic Versioning requires that any API which is removed in Tcl 9.0 must be
-made deprecated in Tcl 8.7 \(or 8.8\). A new macro TCL\_DEPRECATED will be
-introduced for that in the \*Decls.h files. If Tcl 8.7 is compiled with the
-flag TCL\_NO\_DEPRECATED, all deprecated API is removed, by making those entries
-MODULE\_SCOPE, and putting 0 in the corresponding stub entries.  This can be
-used by extensions to see whether they are compatible with the next major Tcl
-release or not.
-
-The following API's are declared deprecated in Tcl 8.7 and will be
-removed in Tcl 9.0. They are already removed in the "novem" branch:
-
- * Tcl\_Backslash
-
- * Tcl\_EvalFile
-
- * Tcl\_GetDefaultEncodingDir
-
- * Tcl\_SetDefaultEncodingDir
-
- * Tcl\_EvalTokens
-
- * Tcl\_CreateMathFunc
-
- * Tcl\_GetMathFuncInfo
-
- * Tcl\_ListMathFuncs
+made deprecated in some earlier minor Tcl 8.x release.
 
 An implementation of this TIP can be found at <http://core.tcl.tk/tcl> ; branch
 "semver".
@@ -158,4 +134,3 @@ TODO
 # Copyright
 
 This document has been placed in the public domain.
-
