Some formatting in TIP #485

--- a/tip/485.md
+++ b/tip/485.md
@@ -25,47 +25,47 @@ The "case" command is superseded by the "switch" command.
 
 The "read \<chan\> nonewline" construct is superseded by "read -nonewline \<chan\>".
 
-The function Tcl\_Backslash is superseded by Tcl\_UtfBackslash
+The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
-The function Tcl\EvalFile is superseded by Tcl\_FSEvalFile
+The function `Tcl_EvalFile` is superseded by `Tcl_FSEvalFile`
 
-The function Tcl\_GetDefaultEncodingDir is superseded by Tcl\_GetEncodingSearchPath
+The function `Tcl_GetDefaultEncodingDir` is superseded by `Tcl_GetEncodingSearchPath`
 
-The function Tcl\_SetDefaultEncodingDir is superseded by Tcl\_SetEncodingSearchPath
+The function `Tcl_SetDefaultEncodingDir` is superseded by `Tcl_SetEncodingSearchPath`
 
-The function Tcl\_EvalTokens is superseded by Tcl\_EvalTokensStandard
+The function `Tcl_EvalTokens` is superseded by `Tcl_EvalTokensStandard`
 
-Finally, the functions Tcl\_CreateMathFunc, Tcl\_GetMathFuncInfo and Tcl\_ListMathFuncs
+Finally, the functions `Tcl_CreateMathFunc`, `Tcl_GetMathFuncInfo` and `Tcl_ListMathFuncs`
 are superseded by [TIP #232](232.md)
 
 # Proposed Change
 
-If Tcl 8.7 is compiled with the flag -DTCL\_NO\_DEPRECATED, the "case" command,
-and the "read <chan> nonewline" construct will be disabled. In Tcl 9.0 all related
+If Tcl 8.7 is compiled with the flag `-DTCL_NO_DEPRECATED`, the "case" command,
+and the "read \<chan\> nonewline" construct will be disabled. In Tcl 9.0 all related
 code will actually be removed from the Tcl code base. 
 
 The following API's are declared deprecated in Tcl 8.7 and will be
-fully removed in Tcl 9.0. If Tcl 8.7 is compiled with the flag -DTCL\_NO\_DEPRECATED,
-all deprecated API is disabled, by making those entries MODULE\_SCOPE, and
+fully removed in Tcl 9.0. If Tcl 8.7 is compiled with the flag `-DTCL_NO_DEPRECATED`,
+all deprecated API is disabled, by making those entries `MODULE_SCOPE`, and
 putting 0 in the corresponding stub entries.  This can be used by extensions
 to see whether they are compatible with the next major Tcl release or not.
 Those functions are already removed in the "novem" branch:
 
- * Tcl\_Backslash
+ * `Tcl_Backslash`
 
- * Tcl\_EvalFile
+ * `Tcl_EvalFile`
 
- * Tcl\_GetDefaultEncodingDir
+ * `Tcl_GetDefaultEncodingDir`
 
- * Tcl\_SetDefaultEncodingDir
+ * `Tcl_SetDefaultEncodingDir`
 
- * Tcl\_EvalTokens
+ * `Tcl_EvalTokens`
 
- * Tcl\_CreateMathFunc
+ * `Tcl_CreateMathFunc`
 
- * Tcl\_GetMathFuncInfo
+ * `Tcl_GetMathFuncInfo`
 
- * Tcl\_ListMathFuncs
+ * `Tcl_ListMathFuncs`
 
 An implementation of this TIP can be found in the [tip-485](https://core.tcl.tk/tcl/timeline?r=tip-485) branch.
 This branch is based on "core-8-branch" (Tcl 8.7), but can be trivially merged forward to trunk (Tcl 9.0).
