Make it very clear that TIP #484 is about the "wideInt" Tcl_ObjType, and not about taking away the typedefs like Tcl_WideInt.

--- a/tip/484.md
+++ b/tip/484.md
@@ -1,4 +1,4 @@
-# TIP 484: Get rid of the "wideInt" type
+# TIP 484: Merge 'int' and 'wideInt' Obj-type to a single 'int'
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -10,20 +10,21 @@
 -----
 # Abstract
 
-The "wideInt" type was invented for Tcl because the "int" type (which was
-actually "long") was not sufficient to store numbers larger than [+-]2**31.
-This TIP proposes to get rid of it.
+The 'wideInt' type was invented for Tcl because the 'int' type (which was
+actually 'long') was not sufficient to store numbers larger than [+-]2**31.
+This TIP proposes to merge the 'int' and the 'wideInt' Obj-types such that
+'int' does all internal calculations using Tcl_WideInt in stead of long.
 
 # Rationale
 
-For linux64, the "wideInt" type doesn't give any advantage, it is #ifdef'd out
-in the code. For Windows 64, since "long" is the same as "int", it would be
+For linux64, the 'wideInt' type doesn't give any advantage, it is #ifdef'd out
+in the code. For Windows 64, since 'long' is the same as 'int', it would be
 an advantage to use __int64 for all internal number processing. Since __int64
 calculations are just as efficient as int/long calculations on most (64-bit and
 32-bit) processors, it would save all kinds of range checks in the Tcl code.
 That's the main gain of this TIP.
 
-Finally, for 32-bit systems, getting rid of "wideInt" could give a small
+Finally, for 32-bit systems, getting rid of 'wideInt' could give a small
 disadvantage on systems which split 64-bit calculations in terms of 32-bit
 calculations. There 32-bit calculations could become slightly slower.
 
@@ -38,7 +39,7 @@ supported by Tcl.
 
 # Proposal
 
-Get rid of the "wideInt" internal type. In stead make the following changes:
+Merge 'int' and 'wideInt' Obj-type to a single 'int'. Make the following changes:
 
 * Change the signature of the internal function `TclFormatInt` to
     `int TclFormatInt(char *buffer, Tcl_WideInt n)`
@@ -51,36 +52,36 @@ Get rid of the "wideInt" internal type. In stead make the following changes:
   bytecode implementation for `string is integer` and `string is wideinteger`.
   On script level this change is not detectable.
 
-* Modify the "int" type to store its internal representation in
+* Modify the 'int' type to store its internal representation in
     internalRep.wideValue in stead of internalRep.longValue. This means
-  that the "int" type gains the full functionality of "wideInt" on
-  all platforms. This makes all "wideInt" special code redundant,
+  that the 'int' type gains the full functionality of 'wideInt' on
+  all platforms. This makes all 'wideInt' special code redundant,
   so it can full be removed from the Tcl code base.
 
 # Compatibility
 
 On systems where sizeof(int) == sizeof(long), there are no compatibility
-issues, since the "wideInt" type code is #ifdef'ed out anyway. On other
+issues, since the 'wideInt' type code is #ifdef'ed out anyway. On other
 systems there are only two possibilities:
 
 * The function call `Tcl_GetObjType("wideInt")` will return NULL, where it
   returned non-NULL before.
 
 * External code which accesses internalRep.longValue directly (after
-  checking that the objType is "int") will start to mis-behave as well.
+  checking that the objType is 'int') will start to mis-behave as well.
 
 However, both of these examples are nonportable, since no external
-code may make assumptions of implementation details for "int".
+code may make assumptions of implementation details for 'int'.
 
-No test-cases are modified in the "no-wideint" branch, all current
-test-cases continue to pass. This shows that separating the "int"
-and the "wideInt" implementation is nowhere required to let
+No test-cases are modified in the 'no-wideint' branch, all current
+test-cases continue to pass. This shows that separating the 'int'
+and the 'wideInt' implementation is nowhere required to let
 Tcl number handling function the way it functions now. At the
 script level, the change is invisible.
 
 # Reference Implementation
 
-The reference implementation is available in the "no-wideint" branch. <http://core.tcl.tk/tcl/timeline?r=no-wideint>
+An implementation of this TIP can be found in the [no-wideint](https://core.tcl.tk/tcl/timeline?r=no-wideint) branch.
 
 The code is licensed under the same license as Tcl.
 
