Explicitly mention [puts ... nonewline] as another deprecated syntax.

--- a/tip/485.md
+++ b/tip/485.md
@@ -25,6 +25,8 @@ The "case" command is superseded by the "switch" command.
 
 The "read \<chan\> nonewline" construct is superseded by "read -nonewline \<chan\>".
 
+The "puts \<chan\> \<line>\> nonewline" construct is superseded by "read -nonewline \<chan\> \<line\>".
+
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
 The function `Tcl_EvalFile` is superseded by `Tcl_FSEvalFile`
@@ -41,7 +43,8 @@ are superseded by [TIP #232](232.md)
 # Proposed Change
 
 If Tcl 8.7 is compiled with the flag `-DTCL_NO_DEPRECATED`, the "case" command,
-and the "read \<chan\> nonewline" construct will be disabled. In Tcl 9.0 all related
+the "read \<chan\> nonewline", and the "puts \<chan\> \<line\> nonewline"
+constructs will be disabled. In Tcl 9.0 all related
 code will actually be removed from the Tcl code base. 
 
 The following API's are declared deprecated in Tcl 8.7 and will be
