--- a/tip/485.md
+++ b/tip/485.md
@@ -25,7 +25,7 @@ The "case" command is superseded by the "switch" command.
 
 The "read \<chan\> nonewline" construct is superseded by "read -nonewline \<chan\>".
 
-The "puts \<chan\> \<line>\> nonewline" construct is superseded by "read -nonewline \<chan\> \<line\>".
+The "puts \<chan\> \<line\> nonewline" construct is superseded by "read -nonewline \<chan\> \<line\>".
 
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
