--- a/tip/485.md
+++ b/tip/485.md
@@ -27,11 +27,12 @@ The "read \<chan\> nonewline" construct is superseded by "read -nonewline \<chan
 
 The "puts \<chan\> \<line\> nonewline" construct is superseded by "read -nonewline \<chan\> \<line\>".
 
-The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`.
-This is more than a matter of naming. `Tcl_Backslash` returns a
-single char. It cannot return all possible character values 
-produced in Tcl backslash sequences.  Moving to the successor
-function fixes bugs.
+The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
+
+   * This is more than a matter of naming. `Tcl_Backslash` returns a
+     single char. It cannot return all possible character values 
+     produced in Tcl backslash sequences.  Moving to the successor
+     function fixes bugs.
 
 The function `Tcl_EvalFile` is superseded by `Tcl_FSEvalFile`
 
