--- a/tip/485.md
+++ b/tip/485.md
@@ -30,7 +30,7 @@ The "puts \<chan\> \<line\> nonewline" construct is superseded by "read -nonewli
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
    * This is more than a matter of naming. `Tcl_Backslash` returns a
-     single char. It cannot return all possible character values 
+     single-byte char. It cannot return all possible character values 
      produced in Tcl backslash sequences.  Moving to the successor
      function fixes bugs.
 
