Extended rationale for killing Tcl_EvalTokens

--- a/tip/485.md
+++ b/tip/485.md
@@ -42,6 +42,11 @@ The function `Tcl_SetDefaultEncodingDir` is superseded by `Tcl_SetEncodingSearch
 
 The function `Tcl_EvalTokens` is superseded by `Tcl_EvalTokensStandard`
 
+   * The routine `Tcl_EvalTokens` is incapable of reporting back to
+     the caller the return code produced by evaluation.  Moving to the
+     successor and fixes bugs inherent in not distinguishing different
+     return codes.
+
 Finally, the functions `Tcl_CreateMathFunc`, `Tcl_GetMathFuncInfo` and `Tcl_ListMathFuncs`
 are superseded by [TIP #232](232.md)
 
