--- a/tip/485.md
+++ b/tip/485.md
@@ -29,10 +29,10 @@ The "puts \<chan\> \<line\> nonewline" construct is superseded by "read -nonewli
 
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
-   * This is more than a matter of naming. `Tcl_Backslash` returns a
-     single-byte char. It cannot return all possible character values 
+   * The routine `Tcl_Backslash` returns a single-byte char.
+     It cannot return all possible character values 
      produced in Tcl backslash sequences.  Moving to the successor
-     function fixes bugs.
+     routine fixes bugs.
 
 The function `Tcl_EvalFile` is superseded by `Tcl_FSEvalFile`
 
@@ -44,7 +44,7 @@ The function `Tcl_EvalTokens` is superseded by `Tcl_EvalTokensStandard`
 
    * The routine `Tcl_EvalTokens` is incapable of reporting back to
      the caller the return code produced by evaluation.  Moving to the
-     successor and fixes bugs inherent in not distinguishing different
+     successor routine fixes bugs inherent in not distinguishing different
      return codes.
 
 Finally, the functions `Tcl_CreateMathFunc`, `Tcl_GetMathFuncInfo` and `Tcl_ListMathFuncs`
