Started listing "routines" never properly even in Tcl 8 which should go away.

--- a/tip/485.md
+++ b/tip/485.md
@@ -27,6 +27,12 @@ The "read \<chan\> nonewline" construct is superseded by "read -nonewline \<chan
 
 The "puts \<chan\> \<line\> nonewline" construct is superseded by "read -nonewline \<chan\> \<line\>".
 
+The following C routines -- mostly macros -- like the "case" command
+have never been part of the documented interface of Tcl 8, and should
+be removed:
+
+   * `Tcl_DStringTrunc`
+
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
    * The routine `Tcl_Backslash` returns a single-byte char.
