More bogus interfaces to be killed.

--- a/tip/485.md
+++ b/tip/485.md
@@ -32,6 +32,12 @@ have never been part of the documented interface of Tcl 8, and should
 be removed:
 
    * `Tcl_DStringTrunc`
+   * `Tcl_Ckalloc`
+   * `Tcl_Ckfree`
+   * `Tcl_Ckrealloc`
+   * `Tcl_Return`
+   * `Tcl_TildeSubst`
+   * `panic`
 
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
