--- a/tip/485.md
+++ b/tip/485.md
@@ -46,8 +46,6 @@ The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
      produced in Tcl backslash sequences.  Moving to the successor
      routine fixes bugs.
 
-The function `Tcl_EvalFile` is superseded by `Tcl_FSEvalFile`
-
 The function `Tcl_GetDefaultEncodingDir` is superseded by `Tcl_GetEncodingSearchPath`
 
 The function `Tcl_SetDefaultEncodingDir` is superseded by `Tcl_SetEncodingSearchPath`
@@ -61,6 +59,12 @@ The function `Tcl_EvalTokens` is superseded by `Tcl_EvalTokensStandard`
 
 Finally, the functions `Tcl_CreateMathFunc`, `Tcl_GetMathFuncInfo` and `Tcl_ListMathFuncs`
 are superseded by [TIP #232](232.md)
+
+The function `Tcl_EvalFile` was documented to be superseded by `Tcl_FSEvalFile`, but
+it turns out to be too useful and used in actual code. This TIP proposes to remove
+the stub entry and the actual function, but in stead provide a new macro which
+expresses `Tcl_EvalFile` in terms of `Tcl_FSEvalFileEx`. This way, user code
+using `Tcl_EvalFile` is not affected.
 
 # Proposed Change
 
@@ -77,8 +81,6 @@ to see whether they are compatible with the next major Tcl release or not.
 Those functions are already removed in the "novem" branch:
 
  * `Tcl_Backslash`
-
- * `Tcl_EvalFile`
 
  * `Tcl_GetDefaultEncodingDir`
 
@@ -97,7 +99,7 @@ This branch is based on "core-8-branch" (Tcl 8.7), but can be trivially merged f
 
 # Rejected Alternatives
 
-TODO
+Originally, `Tcl_EvalFile` was a candidate for removal as well.
 
 # Copyright
 
