Adapt TIP 459 to Final, because vote has been done already.

--- a/tip/459.md
+++ b/tip/459.md
@@ -1,8 +1,8 @@
 # TIP 459: Tcl Package Introspection Improvements
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           Pending
+	Vote:           Done
 	Created:        08-Dec-2016
 	Post-History:   
 	Keywords:       Tcl,package
