Document PRJ_PACKAGE_TCLNAME and default-install-stubs.

--- a/tip/477.md
+++ b/tip/477.md
@@ -8,7 +8,7 @@
 	Keywords:       Windows nmake build
 	Tcl-Version:    8.7
 -----
-<!-- TOC BEGIN -->
+<!-- TOC BEGIN (auto generated with tiptoc) -->
 * <a href='#toc-2'>Abstract</a>
 * <a href='#toc-3'>Background and Rationale</a>
     * <a href='#toc-4'>Simplifying extension makefiles</a>
@@ -357,13 +357,24 @@ will install the extension while
 
 will do various levels of cleaning.
 
-The two macros that need to be defined for a basic extension are shown below.
+The macros that need to be defined for a basic extension are shown below.
 
 >
 Macro|Description
 -----|-----------
 `PROJECT`|Name of the package. Must be defined before including `rules-ext.vc`.
 `PRJ_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` as shown above.
+`PRJ_PACKAGE_TCLNAME`|(optional)Name for the `package require` command. Defaults to `$(PROJECT)`
+
+The `PROJECT` macro is used to generate the name of the extension
+binaries, directories etc. On the other hand, `PRJ_PACKAGE_TCLNAME` is
+the name of the package as known to Tcl. In most cases, this defaults
+to the value of `$(PROJECT)` and need not be specified by the
+extension makefile. In some cases, where the package names is not a
+simple ascii string, the two differ, for example, `PROJECT` may be
+defined as `tkimgbmp` while `PRJ_PACKAGE_TCLNAME` may be defined
+as `img::bmp`.
+
 
 ## <a id='toc-17'></a>Makefile for a basic Tk extension
 
@@ -963,6 +974,7 @@ Target|Description
 `default-install`|Combines `default-install-binaries` and `default-install-libraries`.
 `default-install-binaries`|Copies the generated binary extension to the installation directory.
 `default-install-libraries`|Copies all `*.tcl` files from `$(LIBDIR)`, if it exists, to the installation directory.
+`default-install-stubs`|Copies the extension stub library to the installation directory.
 `default-clean`|Cleans up `$(TMP_DIR)` but not `$(OUT_DIR)`
 `default-hose`|Cleans up `$(OUT_DIR)` which normally also includes `$(TMP_DIR)`
 `default-distclean`|Maps to `default-hose` plus cleans up `nmakehlp` helpers.
@@ -1204,6 +1216,11 @@ requires threaded builds.
 # <a id='toc-56'></a>Copyright
 
 This document has been placed in the public domain.
+
+
+
+
+
 
 
 
