TIP 422 voding done: Accepted

--- a/tip/422.md
+++ b/tip/422.md
@@ -1,8 +1,8 @@
 # TIP 422: Don't Use stdarg.h/va_list in Public API
 	Author:         Jan Nijtmans <nijtmans@users.sf.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        02-Jan-2013
 	Post-History:
 	Tcl-Version:    9.0
