--- a/tip/486.md
+++ b/tip/486.md
@@ -26,6 +26,10 @@ and Thread 2.8 will be that Thread 3.0 will run on Tcl 9.0 only, while Thread 2.
 run on Tcl 8.x only. All functionality which keeps Thread running on Tcl 8.x will be
 removed in Thread 3.0, but at the script level everything will be 100% upwards compatible.
 
+When the time comes, Thread 3.0a1 will be released together with Tcl 9.0a1, and the same
+with follow-up intermediate releases. Thread 3.0 will be released together with Tcl 9.0.0.
+
+
 # Implementation
 
 An implementation of this TIP can be found in the [novem](https://core.tcl.tk/thread/timeline?r=novem) branch.
