Incorporate feedback from Jan.
The nothreads option is added back for compatibility for 8.6
Noted the change in output directory names to distinguish compiler versions.

--- a/tip/477.md
+++ b/tip/477.md
@@ -673,7 +673,7 @@ the letters shown below.
 >
 Suffix|Meaning
 ------|-------
-`t`|Threaded build. Always set as Tcl requires a threaded build on Windows.
+`t`|Threaded build. Default on Windows.
 `s`|Static build. Not present for dynamic builds.
 `g`|Debug build with symbols.
 `x`|Static build but linking to dynamic C runtime.
@@ -1210,8 +1210,13 @@ macros, see the makefiles for Tcl and Tk themselves.
 
 ## <a id='toc-55'></a>Incompatible changes
 
-OPTS values `nothreads` and `tclalloc` are not accepted as Windows
-requires threaded builds.
+For Visual Studio 2015 and later compilers, the compiler version
+number encoded in the default output directories now includes the
+entire version number, for example `1900` as opposed to the 
+older mapped major version like `12`. The reason for this is that
+Microsoft no longer necessarily changes the major version between
+releases but we still want to distinguish output directories from
+different compiler versions.
 
 # <a id='toc-56'></a>Copyright
 
