TIP #161 targets 8.7 - Now Voting

--- a/tip/161.md
+++ b/tip/161.md
@@ -1,12 +1,12 @@
 # TIP 161: Change Default for Menu's -tearoff Option to False
 	Author:         Mark Roseman <mark@markroseman.com>
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Voting
 	Type:           Project
 	Vote:           Pending
 	Created:        19-Oct-2003
 	Post-History:   
-	Tcl-Version:    9.0
+	Tcl-Version:    8.7
 -----
 
 # Abstract
@@ -48,10 +48,14 @@ Unfortunately, entries in menus are often accessed by index within
 scripts, and the presence or absence of tearoff affects this index.
 Therefore, changing the default setting of this option will affect a
 large number of scripts.  Though fixing these scripts will be
-straightforward \(either through adjusting access to individual menus,
-or using the option database to turn the tearoff option back on\),
-because of the incompatibility this TIP is proposed for 9.0 rather
-than 8.x.
+straightforward, because of the incompatibility this TIP was
+originally proposed for 9.0. However, after consultation of the
+community on the Tcl-core list, opinions were that this TIP can target
+8.7.
+Should the old tearoff default need to be back, this can easily be
+achieved either through adjusting access to individual menus, or using
+the option database to turn the tearoff option back on through [option
+add *Menu.tearOff 1]
 
 # Example
 
