Updates to tip430

--- a/tip/430.md
+++ b/tip/430.md
@@ -48,52 +48,100 @@ present.
 There shall be new commands added to safe interpreters within Tcl. All of which
 shall be in the **::zipfs** namespace. These commands shall include:
 
- * **zipfs::mount** ?_archive_? ?_mountpoint_?
+ * **zipfs mount** ?_archive_? ?_mountpoint_?
 
      > Mounts the ZIP file _archive_ at the location given by _mountpoint_,
      > which will default to **zipfs:/_archive_** if absent. With no arguments
      > this command describes all current mounts, returning a list of pairs.
 
- * **zipfs::unmount** _archive_
+ * **zipfs root**
 
-	 > Unmounts the ZIP file _archive_, which must have been previously mounted.
+     > Return the root mount point for Zipfs file systems. On windows this returns **zipfs:/**.
+     > On all other platforms this returns **//zipfs:/**
 
-Safe interpreters will not be given the mount or unmount commands.
-Already mounted file systems will be available via the **glob** and **file**
-commands. These commands, and any commands related to building
-archives will be marked with the unsafe bit within the **zipfs** ensemble,
-and will be removed from any interpreter through the normal mechanism
-to hide unsafe commands within the core.
+ * **zipfs unmount** _archive_
+
+     > Unmounts the ZIP file _archive_, which must have been previously mounted.
+
+## VFS Mount Point
+
+On Windows ZipFs will mount all archives under *zipfs:/*. On all other platforms,
+ZipFs will mount all archives under *//zipfs:/*. Which root is being used for
+the current platform can be accessed via a call to **zipfs root**. For the remainder
+of this document, the mount point for zipfs will be referred to a **ZIPFS\_ROOT**.
+
+Volumes may be mounted at any point under
+**ZIPFS\_ROOT**, and if a mount point does not start with **ZIPFS\_ROOT** the path will be
+considered relative to **ZIPFS\_ROOT**. This conventions avoids some confusing interactions
+between **file normalize** and **glob** that differ between Windows and Unix and
+make building global paths either hop volumes or interact with the native file system.
+
+Having a fixed mount point breaks from the tradition of mounting volumes under /
+or **info nameofexecutable** that other zipfs implementations use. However, if
+a kit builder wishes to retain that capability, all that is required is to
+load their own zipfs implementation using the conventional shims provided for kit building.
+The function names for the core implementation have been modified to not conflict with
+zipfs implementations that are out in the wild.
 
 # Implementation
 
 I have adapted Richard Hipp's work on Tcl As One Big Executable \(TOBE\) to
 operate inside of a modern Tcl. That implementation consists of one C file
-\(_tclZipvfs.c_\).  I have also prepared new behaviors for inside of
-**Tcl\_AppInit\(\)** to detect if a zip filesystem is attached to the current
-executable, and how to extract a "_main.tcl_" as well as the initial file
-systems for both Tcl and Tk.
+\(_tclZipvfs.c_\).  I have also prepared a set of kit-like behaviors for the
+core to express when tclAppInit.c is not compiled with a **TCL\_LOCAL\_MAIN\_HOOK**
+defined. Those behaviors reside in the *TclZipfs_AppHook\(\)* function.
 
 This work is checked in as the "_core\_zip\_vfs_" branch on both Tcl and Tk.
 
-# Mount Point
+## Modifications to tclBasic.c
 
-Zipfs adopts the metaphor from the tclvfs family of tools of _protocol_:/.
-This breaks from the tradition of mounting volumes under / or **info nameofexecutable**
-that other zipfs implementations use. Volumes may be mounted at any point under
-zipfs:/, and if a mount point does not start with zipfs:/ the path will be
-considered relative to zipfs:/. This conventions avoids some confusing interactions
-between **file normalize** and **glob** that differ between Windows and Unix and
-make building global paths either hop volumes or interact with the native file system.
+*tclBasic.c* will contain a call to *TclZipfs_Init\(\) which will initialize the
+portions of C needed to implement zipfs as well as inject the zipfs command into the
+interpreter.
 
+## New C File tclZipFS.c
+
+This file is a self-contained implementation in C of a zip based VFS. It includes all
+functions needed for implementing zipfs.
+
+## Modifications to tclAppInit.c
+
+*tclAppInit.c* will now call *TclZipfs_AppHook\(\)* if no **TCL\_LOCAL\_MAIN\_HOOK** was defined.
+
+## Modifications to the Tcl build system
+
+Tcl will now build a copy of the **minizip** program, whose source is currently distributed
+in */compat/zlib/contrib/minizip*. The *tcl.m4* macro now detects if the compiler used
+can produce native native executables, and in cases where it cannot, will search for
+a C compiler that can, an substitute that value into the Makefile as **HOST_CC**. The C compiler
+will generate a native executable **minizip** which will be compiled in the same directory
+as tcl, and be used for all archive creation.
+
+A new build target **libtcl\_**_MAJOR__MINOR__PATCHLEVEL_**.zip** is
+created from the **/library** directory in the tcl sources. For static library installs,
+this archive is copied to the tcl standard install location. For shared library builds this
+archive is appended to the dynamic library.
+
+## Modifications to the /library file system
+
+To reduce the complexity of building archives, *init.tcl* has been modified to look for
+the presence of an adjacent file *pkgIndex.tcl*. That file contains all of the **package ifneeded**
+calls to direct the core to find the core distributed packages relative to location of
+**tcl_library**. Unlike other **pkgIndex.tcl** files, this file must be manually maintained
+and kept up to date as package names and versions change, are added, or removed.
 
 # C API
 
-* **int TclZipfs_Init\(Tcl\_Interp \*interp\);**
+* **int TclZipfs_AppHook\(int \*argc, char \*\*\*argv\);**
 
-    > Initializes the C API for Zipfs. If called with a non-null _interp_, adds
-    > the commands for the zipfs Tcl API to the interpreter. Returns
-    > **TCL\_OK** on success, and **TCL\_ERROR** in  all other cases.
+1. If the current executable has an attached zip file system, mount that to **ZIPFS\_ROOT**/app.
+2. If the file **ZIPFS\_ROOT**_/app/main.tcl_ exists, register that file as the process startup script.
+3. If the file **ZIPFS\_ROOT**_/app/tcl\_library/init.tcl_ exists, register **ZIPFS\_ROOT**_/app/tcl\_library/init.tcl_ as **tcl\_library**
+4. If the file **ZIPFS\_ROOT**_/app/tk\_library/init.tcl_ exists, register **ZIPFS\_ROOT**_/app/tk\_library/init.tcl* as **tk\_library**
+5. If **tcl\_library** was not set, the function will then scan the local environment for a
+zipfs file system attached to either the tcl dynamic library or an archive named
+*libtcl\_MAJOR\_MINOR\_PATCHLEVEL.zip*. That file can either be in the present working directory
+or in the standard system install location for Tcl.
 
 * **int TclZipfs_Mount\(Tcl\_Interp \*interp, const char \*zipname, const char \*mntpt, const char \*passwd\);**
 
@@ -104,43 +152,6 @@ make building global paths either hop volumes or interact with the native file s
 * **int TclZipfs_Unmount\(Tcl\_Interp \*interp, const char \*zipname\);**
 
     > Unmount the file system created by a prior call to **TclZipfs_Mount\(\)**
-
-## Interactions with the Tcl startup sequence
-
-The mount and unmount commands are usable within the core as just another
-feature engine. A call to **TclZipfs_Init\(\)** will be inserted into
-_tclBasic.c_, immediately after the code to initialize zlib.
-
-A modified shell \(`tclkit.exe`\) will be generated by Make. This shell will:
-
-* Check if the executable has a zip archive attached. If so, that archive shall
-  be mounted as **zipfs:/app**.
-
-* If **zipfs:/app** is present the interpreter will look for
-  **boot/tcl/init.tcl**. If that file is present, the location for
-  **$tcl\_library** will be set to **zipfs:/app/boot/tcl**.
-
-* If the app does not present a **zipfs:/app/boot/tcl** file system, Check if the libtcl dynamic
-  library has a zip archive attached, or libtcl.zip file is present in the same
-  location as the libtcl shared library. If so, that archive shall be mounted
-  as **zipfs:/tcl_library**. The location for  **$tcl\_library** will be set to
-  **zipfs:/tcl_library**.
-
-* If the app does not present a **zipfs:/app/boot/tk** file system, Check if the libtk dynamic
-  library has a zip archive attached, or libtk.zip file is present in the same
-  location as the libtcl shared library. If so, that archive shall be mounted
-  as **zipfs:/tk_library**. The location for  **$tk\_library** will be set to
-  **zipfs:/tk_library**.
-
-* If **zipfs:/app** is present the interpreter will look for **boot/tk/tk.tcl**.
-  If present the location for **$tk\_library** will be set to
-  **zipfs:/boot/tk**.
-
-* If the file **pkgIndex.tcl** is present, the **$dir** variable will be set to
-  **zipfs:/app** and the file will be sourced as if it were a package index.
-
-* If the file **main.tcl** is present, the file **zipfs:/app/main.tcl** will
-  be registered with **Tcl\_SetStartupScript\(\)**
 
 # Copyright
 
