Add an example wrapped program

--- a/tip/430.md
+++ b/tip/430.md
@@ -153,6 +153,20 @@ or in the standard system install location for Tcl.
 
     > Unmount the file system created by a prior call to **TclZipfs_Mount\(\)**
 
+# Creating a wrapped executable
+
+With this tip, producing a wrapped executable is now a matter of:
+
+    mkdir myvfs.vfs
+    cd myvfs.vfs
+    echo "puts {hello world}" > main.tcl
+    zip -r ../hello.zip .
+    cd ..
+    cp tclsh8.7 hello
+    cat hello.zip >> hello
+    ./hello
+    > hello world
+
 # Copyright
 
 This document has been placed in the public domain.
