Clarifed that in tip430 the preferred mount point for zipfs is now //zipfs:/ for all platforms.

--- a/tip/430.md
+++ b/tip/430.md
@@ -65,8 +65,10 @@ shall be in the **::zipfs** namespace. These commands shall include:
 
 ## VFS Mount Point
 
-On Windows ZipFs will mount all archives under *zipfs:/*. On all other platforms,
-ZipFs will mount all archives under *//zipfs:/*. Which root is being used for
+On virtually all platforms tcl supports (Unix, Windows) ZipFs will mount all archives
+under *//zipfs:/*. Some operating systems (past or future) may have a special meaning
+for this style path. To that end, it may be changed to address the needs of the
+specific environment. Which root is being used for
 the current platform can be accessed via a call to **zipfs root**. For the remainder
 of this document, the mount point for zipfs will be referred to a **ZIPFS\_ROOT**.
 
@@ -107,6 +109,17 @@ functions needed for implementing zipfs.
 ## Modifications to tclAppInit.c
 
 *tclAppInit.c* will now call *TclZipfs_AppHook\(\)* if no **TCL\_LOCAL\_MAIN\_HOOK** was defined.
+
+## Modifications to tclFileName.c
+
+*tclFileName.c* has a minor patch to exclude the prefix **//** from local file searches.
+
+## Modifications to tclIOUtil.c
+
+*tclIOUtil.c* has a minor patch to exclude UNC style paths that contain a colon \(:\) in
+the server field from being resolved by the operating system. (Which by standard is
+not allowed anyway.) This allows VFS file systems to use **//**_FSTYPE_**:** namespace
+with impunity.
 
 ## Modifications to the Tcl build system
 
