--- a/tip/161.md
+++ b/tip/161.md
@@ -3,7 +3,7 @@
 	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        19-Oct-2003
 	Post-History:   
 	Tcl-Version:    8.7
