deprecate CONST/CONST84/TCL_VARARGS/_ANSI_ARGS_ (all platforms) and VOID/CHAR/SHORT/LONG (windows-only) as well.

--- a/tip/485.md
+++ b/tip/485.md
@@ -10,14 +10,18 @@
 
 # Abstract
 
-The "case" command, and the "read \<chan\> nonewline" construct are replaced
-by better commands long ago (resp. "switch" and "read -nonewline \<chan\>"),
+The "case" command, and the "read|puts ... nonewline" construct are replaced
+by better commands long ago (resp. "switch" and "read|puts -nonewline ..."),
 but the old forms were never actually removed from the Tcl code base. They still
 work. See also [bug #3151675](https://core.tcl.tk/tcl/tktview/3151675).
 For Tcl 9.0 it is finally time to actually remove it.
 
 In addition, there are a number of C API's which have better successors
-by now. This TIP proposes to finally remove all of those in Tcl 9.0.
+by now. Finally, there are a few C routines and other macros which were
+never been properly documented before, like `CONST`, or macros needed for
+supporting deprecated C features, like _ANSI_ARGS_ and TCL_VARARGS.
+This TIP proposes to finally remove all of those in Tcl 9.0, and mark
+them as deprecated in Tcl 8.7.
 
 # Rationale
 
@@ -38,6 +42,21 @@ be removed:
    * `Tcl_Return`
    * `Tcl_TildeSubst`
    * `panic`
+
+The following C macros don't serve any purpose any more, they will be removed in Tcl 9.0:
+
+   * `CONST84_RETURN` (just use `const`)
+   * `CONST84` (just use `const`)
+   * `CONST` (just use `const`)
+   * `TCL_VARARGS` (just use `...`)
+   * `TCL_VARARGS_DEF` (just use `...`)
+   * `TCL_VARARGS_START` (just use `va_start()`)
+   * `_ANSI_ARGS_` (just use `(` and `)`)
+   * `VOID`, `CHAR`, `SHORT`, `LONG` (windows-only, just use lower-case variant)
+
+Minor note: The macro `CONST86` is still kept, as this can be used
+for extensions wanting to keep compatibility with Tcl 8.5. This macro
+will become DEPRECATED in Tcl 9.0, but will not be removed yet.
 
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
 
