--- a/tip/485.md
+++ b/tip/485.md
@@ -10,8 +10,8 @@
 
 # Abstract
 
-The "case" command, and the "read|puts ... nonewline" construct are replaced
-by better commands long ago (resp. "switch" and "read|puts -nonewline ..."),
+The "case" command, and the "read\|puts ... nonewline" construct are replaced
+by better commands long ago (resp. "switch" and "read\|puts -nonewline ..."),
 but the old forms were never actually removed from the Tcl code base. They still
 work. See also [bug #3151675](https://core.tcl.tk/tcl/tktview/3151675).
 For Tcl 9.0 it is finally time to actually remove it.
@@ -19,7 +19,7 @@ For Tcl 9.0 it is finally time to actually remove it.
 In addition, there are a number of C API's which have better successors
 by now. Finally, there are a few C routines and other macros which were
 never been properly documented before, like `CONST`, or macros needed for
-supporting deprecated C features, like _ANSI_ARGS_ and TCL_VARARGS.
+supporting deprecated C features, like `_ANSI_ARGS_` and `TCL_VARARGS`.
 This TIP proposes to finally remove all of those in Tcl 9.0, and mark
 them as deprecated in Tcl 8.7.
 
