Mention possibility for "core-8-for-xp" branch.

--- a/tip/487.md
+++ b/tip/487.md
@@ -28,6 +28,13 @@ function `CancelSynchronousIo()` is not available in the OS, Tcl 8.7 will refuse
 startup anyway. The implementation merely drops the runtime-checks for the
 availability of this function.
 
+A "core-8-for-xp" branch will be created alongside "core-8-branch". Anyone (with
+access rights, of course) can merge "core-8-branch" changes to "core-8-for-xp".
+This branch will keep working on Windows XP, as long as people desire.
+
+For Tk 8.7, the same will be done. There the Vista-specific function used is
+`SHCreateItemFromParsingName()`.
+
 # Implementation
 
 An implementation of this TIP can be found in the [tip-487](https://core.tcl.tk/tcl/timeline?r=tip-487) branch.
